# mcp-council-of-mine

./: .gitignore  CODEOWNERS  README.md  pyproject.toml
docs/: COUNCIL_MEMBERS.md  SECURITY_FIXES.md  SECURITY_REVIEW.md
scripts/: council-mcp  run-server.sh
src/mcp_council_of_mine/: prompts.py  security.py  server.py
src/mcp_council_of_mine/council/: members.py  state.py
src/mcp_council_of_mine/tools/: __init__.py  debate.py  history.py  results.py  voting.py
src/mcp_council_of_mine/ui/: templates.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_security.py
